--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd -f ./config/test.env jest --watchAll"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +23,6 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
-    "supertest": "^6.2.4"
+    "nodemon": "^2.0.19"
   }
 }
